--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="Logo">
+            android:label="Sportfest">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
