--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,19 @@
         <activity
             android:name=".MainActivity"
             android:label="Sportfest">
+
+        </activity>
+        <activity android:name=".DisplayListView" />
+        <activity android:name=".SecondActivity" />
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
-        <activity android:name=".DisplayListView" />
-        <activity android:name=".SecondActivity" />
-        <activity android:name=".Login"></activity>
     </application>
 
 </manifest>
