--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,37 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:label="Sportfest">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        </activity>
-        <activity android:name=".DisplayListView" />
-        <activity android:name=".SecondActivity" />
+        <activity android:name=".MainActivity" />
+
+        <activity android:name=".Menue" />
+
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
+
+        <activity android:name=".Home" />
+
+            <activity
+                android:name=".Statistik"
+                android:parentActivityName=".Home"/>
+
+            <activity
+                android:name=".Disziplin"
+                android:parentActivityName=".Home"/>
+
+                <activity
+                    android:name=".DisplayListView"
+                    android:parentActivityName=".Disziplin"/>
+
+                    <activity
+                        android:name=".SecondActivity"
+                        android:parentActivityName=".Disziplin"/>
+
     </application>
 
 </manifest>
