--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity"><intent-filter>
+        <activity android:name=".MainActivity"></activity>
+
+        <activity android:name=".Menue" />
+        <activity android:name=".Login"><intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
-
-        <activity android:name=".Menue" />
-        <activity android:name=".Login">
+        </intent-filter>
 
         </activity>
         <activity android:name=".Home" />
