--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,14 @@
         <activity android:name=".MainActivity"></activity>
 
         <activity android:name=".Menue" />
-        <activity android:name=".Login"><intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".Login">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+
         <activity android:name=".Home" />
         <activity
             android:name=".Statistik"
@@ -32,7 +33,7 @@
             android:name=".DisplayListView"
             android:parentActivityName=".Disziplin" />
         <activity
-            android:name=".SecondActivity"
+            android:name=".SprungEingabe"
             android:parentActivityName=".Disziplin" />
         <activity
             android:name=".Statistik1"
