ListView der besten Sprünge / des besten Sprungs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <activity
             android:name=".Statistik1"
             android:parentActivityName=".Home"></activity>
+        <activity
+            android:name=".DisplayListViewStatistik"
+            android:parentActivityName=".Home"></activity>
     </application>
 
 </manifest>
