--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,14 +24,8 @@
 
         <activity android:name=".Home" />
         <activity
-            android:name=".Statistik"
-            android:parentActivityName=".Home" />
-        <activity
-            android:name=".Disziplin"
-            android:parentActivityName=".Home" />
-        <activity
-            android:name=".DisplayListView"
-            android:parentActivityName=".Disziplin" />
+            android:name=".DisplayListViewStatistik"
+            android:parentActivityName=".StatistikFragment" />
         <activity
             android:name=".SprungEingabe"
             android:parentActivityName=".Disziplin" />
