--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,27 +11,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity"></activity>
 
-        <activity android:name=".Menue" />
-        <activity android:name=".Login">
+
+
+        <activity
+            android:name=".Menue"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Login"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".Home" />
+        <activity
+            android:name=".Home"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".DisplayListViewStatistik"
-            android:parentActivityName=".StatistikFragment" />
+            android:parentActivityName=".StatistikFragment"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SprungEingabe"
-            android:parentActivityName=".Disziplin" />
+            android:parentActivityName=".Disziplin"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Statistik1"
-            android:parentActivityName=".Home"></activity>
+            android:parentActivityName=".Home"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
